--- a/07.tex
+++ b/07.tex
@@ -87,6 +87,7 @@ Finally, we show $\eta((q_n,q_r))\delta^p_{a_p} \subseteq \eta((q_n, q_r) \delta
                       = & \eta((q_n, q_r) \delta^\omega_{a_r})) \tag{def. $\xi$}\\
                       = & \eta((q_n, q_r) \delta^\omega_{\xi(a_p)}))
 \end{align*}
+This gets boring...
 \qed
 \section{}
 \end{document}
