--- a/07.tex
+++ b/07.tex
@@ -98,9 +98,13 @@ Now we need to show that
 \end{equation}
 Proof:\\
 \begin{align*}
+    (q\delta_a, (q'\delta'_{a'} , q''\delta''_{a''})) = &\\
+    \alpha((q\delta_a, q'\delta'_{a'}), q''\delta''_{a''} ) = & \\
     \alpha((q,q'),q'')((\delta \land \delta') \land \delta'')_{((a, a'), a'')}) \subseteq & (q, (q', q''))(\delta \land (\delta' \land \delta'')_{a, (a', a'')}\\
-                    = & (q\delta_a, (q'\delta'_{a'} , q''\delta''_{a''}))
+                    = & (q\delta_a, (q'\delta'_{a'} , q''\delta''_{a''}))\\
 \end{align*}
+This concludes the proof for our claim $(M_1 \times M_2) \times M_3 \simeq M_1 \times (M_2 \times M_3)$.
+\qed
 \section{}
 We prove $P \leq N \omega R$ under the assumption $M \leq N$ and $P \leq M \omega R$.
 Let $\eta_1: Q_n \rightarrow Q_m$ and $\eta_2: Q_m \times Q_r \rightarrow Q_p$ be the $\eta$-functions of $M \leq N$ and $P \leq M \omega R$.
@@ -124,7 +128,6 @@ Finally, we show $\eta((q_n,q_r))\delta^p_{a_p} \subseteq \eta((q_n, q_r) \delta
                       = & \eta((q_n, q_r) \delta^\omega_{a_r})) \tag{def. $\xi$}\\
                       = & \eta((q_n, q_r) \delta^\omega_{\xi(a_p)}))
 \end{align*}
-This gets boring...
 \qed
 \section{}
 \end{document}
