--- a/07.tex
+++ b/07.tex
@@ -130,5 +130,6 @@ Finally, we show $\eta((q_n,q_r))\delta^p_{a_p} \subseteq \eta((q_n, q_r) \delta
 \end{align*}
 \qed
 \section{}
+No time for that, buzy buying christmas presents.
 \end{document}
 
